# melis

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  config.yaml.example  docker-compose.yml  routes.yaml.example
.github/workflows/: release.yml
.kiro/specs/melis-ai-gateway/: .config.kiro  design.md  requirements.md  tasks.md
docs/: GUIDE.md
monitoring/: docker-compose.monitoring.yml  prometheus.yml
monitoring/grafana/dashboards/: melis-gateway.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
src/: balancer.rs  circuit_breaker.rs  client.rs  compactor.rs  config.rs  error.rs  integration_tests.rs  main.rs  models.rs  observability.rs  route_config.rs  router.rs  routing.rs  state.rs  streaming.rs
src/middleware/: auth.rs  mod.rs  rate_limiter.rs
src/transpiler/: anthropic.rs  mod.rs  openai.rs  vertex.rs
