[package]
name = "melis-gateway"
version = "0.1.0"
edition = "2021"
description = "Melis AI Gateway - Ultra-high performance stateless reverse proxy for LLM providers"

[[bin]]
name = "melis-gateway"
path = "src/main.rs"

[dependencies]
# HTTP framework & runtime
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["full"] }
tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version = "0.6.2", features = ["trace", "limit"] }

# Serialization
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"

# Redis client (cluster-aware, multiplexed)
fred = { version = "9.4.0", features = ["i-scripts"] }

# Tokenizer (HuggingFace)
tokenizers = "0.20.3"

# HTTP client
reqwest = { version = "0.12.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
bytes = "1"

# Observability
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28.0"
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27.0"
prometheus = "0.13"

# Configuration hot-reload
notify = "6.1.1"
arc-swap = "1.7.1"

# Error handling
thiserror = "2.0.9"

# Async trait support
async-trait = "0.1.83"

# Stream utilities for SSE support
tokio-stream = "0.1"
futures-util = "0.3"
async-stream = "0.3"

[dev-dependencies]
proptest = "1.5.0"
wiremock = "0.6.1"
testcontainers = "0.22.0"
tempfile = "3.14.0"
tokio-test = "0.4.4"
http-body-util = "0.1"
